Fix typo and remove admin link in protocolo1 templates
Corrected a typo in the heading of formulario_paso1.html and removed the 'Ver en Admin' button from exito.html for protocolo1. These changes improve clarity and user experience in the protocol submission workflow.

--- a/Proyecto Arzo/protocolos/templates/protocolo1/formulario_paso1.html
+++ b/Proyecto Arzo/protocolos/templates/protocolo1/formulario_paso1.html
@@ -24,7 +24,7 @@
 </head>
 <body>
     <div class="form-container">
-        <h1>Formulario 1: Fromulario de Denuncia</h1>
+        <h1>Formulario 1: Formulario de Denuncia</h1>
         <form method="post">
             {% csrf_token %}
 
