--- a/Proyecto Arzo/Validaciones/templates/Validaciones/Almacen.html
+++ b/Proyecto Arzo/Validaciones/templates/Validaciones/Almacen.html
@@ -112,8 +112,8 @@
         <tbody>
             {% for p in protocolos %}
             <tr class="protocol-row" data-protocolo-id="{{ p.id }}">
-                <td>{{ p.ficha_denuncia.nombre_denunciante|default:"N/A" }}</td>
-                <td>{{ p.ficha_denuncia.curso_denunciado|default:"N/A" }}</td>
+                <td>{{ p.primer_involucrado|default:"N/A" }}</td>
+                <td>{{ p.primer_curso|default:"N/A" }}</td>
                 <td>{{ p.tipo.nombre|default:"N/A" }}</td>
                 <td>{{ p.get_estado_display|default:p.estado|default:"N/A" }}</td>
                 <td>{{ p.creador.get_full_name|default:p.creador.username }}</td>
